<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="materialize">MAKE YOUR APP MATERIAL</string>
    <string name="ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>


</resources>
