<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nelson.myportfolioapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/my_title"
        android:textSize="10pt"
        android:textColor="#2E3D49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView" />

    <Button
        android:text="@string/popular_movies"
        style="@style/Button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="12dp"
        android:id="@+id/popular_movies" />

    <Button
        android:text="@string/stock_hawk"
        style="@style/Button"
        android:layout_below="@+id/popular_movies"
        android:layout_marginTop="12dp"
        android:id="@+id/stock_hawk" />

    <Button
        android:text="@string/build_bigger"
        style="@style/Button"
        android:layout_below="@+id/stock_hawk"
        android:layout_marginTop="22dp"
        android:id="@+id/build_bigger" />

    <Button
        android:text="@string/materialize"
        style="@style/Button"
        android:layout_below="@+id/build_bigger"
        android:layout_marginTop="23dp"
        android:id="@+id/materialize" />

    <Button
        android:text="@string/ubiquitous"
        style="@style/Button"
        android:layout_below="@+id/materialize"
        android:layout_marginTop="21dp"
        android:id="@+id/ubiquitous" />

    <Button
        android:text="@string/capstone"
        style="@style/Button"
        android:layout_below="@+id/ubiquitous"
        android:layout_marginTop="25dp"
        android:id="@+id/capstone" />
</RelativeLayout>
